change text_en.properties and change MenuForAddOrUpdateUser

--- a/src/main/resources/text_en.properties
+++ b/src/main/resources/text_en.properties
@@ -17,7 +17,14 @@ err_del=!!! The book was not been deleted! invalid Id number entered !!!
 id_up=\nEnter the Id of the user you want to update --> 
 up_book=The book update successfully
 err_up=!!! The book was not been update !!!
+enter=Enter the correct number: 1,2,3,4 or E
 
 #MENU ADD OR UPDATE
+title_book=\nEnter the title book (Ex.: Biology) -->  
+err_title=The title must consist of letters, and begin with a capital letter.Try again.
+author=Enter the name of author (Ex.Ivanov I.I.) -->  
+err_author=\nName of author must consist of letters, and begin with a capital letter.Try again.
+description=Enter description of book -->  
+
 
 
