add menu choose language

--- a/src/main/resources/text_en.properties
+++ b/src/main/resources/text_en.properties
@@ -1,3 +1,8 @@
+#MAIN LANGUAGE
+select=Select the application language:
+rus=if you need Russian, press -- 1
+en=if you need English, press any button
+
 #MAIN MENU
 menu=\nMAIN MENU:
 choice1=If you need to add a book, press - 1
