add method findByName

--- a/src/main/resources/text_en.properties
+++ b/src/main/resources/text_en.properties
@@ -9,7 +9,8 @@ choice1=If you need to add a book, press - 1
 choice2=If you need to see all books, press - 2
 choice3=If you need to delete the book press - 3
 choice4=If you need to change book settings, press - 4
-choice5=If you want to exit press 'E' .
+choice5=If you need to find book by title, press - 5
+choice6=If you want to exit press 'E' .
 make_choice=Make a choice -->  
 add_book=New book add successfully
 err_add=!!! Error adding new book !!!
@@ -20,6 +21,8 @@ del_book1=The book with Id =
 del_book2= was deleted successfully
 err_del=!!! The book was not been deleted! invalid Id number entered !!!
 id_up=\nEnter the Id of the book you want to update -->  
+title_find=\nEnter the title book -->  
+err_find=!!! The book was not been find !!!
 up_book=The book update successfully
 err_up=!!! The book was not been update !!!
 enter=Enter the correct number: 1,2,3,4 or E
