--- a/src/main/resources/text_ru.properties
+++ b/src/main/resources/text_ru.properties
@@ -4,7 +4,8 @@ choice1=Если нужно добавить новую книгу, нажми -
 choice2=Если нужно просмотреть все книги, нажми - 2
 choice3=Если нужно удалить книгу, нажми - 3
 choice4=Если нужно изменить книгу, нажми - 4
-choice5=Для выхода из программы, нажми 'E' .
+choice5=Если нужно найти книгу по названию, нажми - 5
+choice6=Для выхода из программы, нажми 'E' .
 make_choice=Сделайте свой выбор -->  
 add_book=Новая книга успешно добавлена
 err_add=!!! Ошибка добавления новой книги !!!
@@ -15,6 +16,8 @@ del_book1=Книга с Id =
 del_book2= успешно удалена
 err_del=!!! Книга не была удалена! Id книги не корректен !!!
 id_up=\nВведите Id книги которую вы желаете обновить --> 
+title_find=\nВведите название книги -->  
+err_find=!!! Книга с таким названием не найдена !!!
 up_book=Книга обновлена успешно
 err_up=!!! Книга не была обновлена !!!
 enter=Введите корректные значения: 1,2,3,4 or E
