add spring jdbc

--- a/src/main/resources/text_en.properties
+++ b/src/main/resources/text_en.properties
@@ -6,7 +6,7 @@ en=if you need English, press any button
 #MAIN MENU
 menu=\nMAIN MENU:
 choice1=If you need to add a book, press - 1
-choice2=If you need to see all books, press - 2
+choice2=If you need to see all book2s, press - 2
 choice3=If you need to delete the book press - 3
 choice4=If you need to change book settings, press - 4
 choice5=If you need to find book by title, press - 5
@@ -14,7 +14,7 @@ choice6=If you want to exit press 'E' .
 make_choice=Make a choice -->  
 add_book=New book add successfully
 err_add=!!! Error adding new book !!!
-all_books=\nList of all books:
+all_books=\nList of all book2s:
 err_all=execution error!
 id_del=Enter the Id of the book you want to delete -->  
 del_book1=The book with Id = 
@@ -32,7 +32,9 @@ title_book=\nEnter the title book (Ex.: Biology) -->
 err_title=The title must consist of letters, and begin with a capital letter.Try again.
 author=Enter the name of author (Ex.Ivanov I.I.) -->  
 err_author=\nName of author must consist of letters, and begin with a capital letter.Try again.
-description=Enter description of book -->  
+genre= Enter genre the book-->  
+year= Enter year the book-->
+
 
 
 
