--- a/src/main/resources/text_ru.properties
+++ b/src/main/resources/text_ru.properties
@@ -27,4 +27,5 @@ title_book=\nВведите название книги (Пример.: Biology)
 err_title=Название книги должно содержать буквы и начинаться с большой буквы. Попробуй снова.
 author=Введи ФИО автора (Пример.: Ivanov I.I.) -->  
 err_author=\nФИО автора должно содержать буквы и начинаться с большой буквы. Попробуй снова.
-description= Введи описание книги-->  
+genre= Введи жанр книги-->  
+year= Введите год издания книги-->
